- refactoring primary key cnpj/cpf of unformated char(14) to formated varchar(18);